--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 		<link
 			rel="icon"
 			type="image/svg+xml"
-			href="/bryana-logo-header.svg"
+			href="/Hamzville-logo.svg"
 		/>
 		<meta
 			name="viewport"
 			content="width=device-width, initial-scale=1.0"
 		/>
-		<title>Bryana Resort & Apartment</title>
+		<title>Hamzville Solutions</title>
 		<link
 			rel="stylesheet"
 			href="https://rsms.me/inter/inter.css"
